--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "sass": "^1.58.3"
   }
 }
