playing around with postcss-preset-env and open-props

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "astro-test",
   "type": "module",
   "version": "0.0.1",
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {
     "dev": "astro dev --host",
     "start": "astro dev",
@@ -19,6 +22,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "open-props": "^1.5.5",
+    "postcss-jit-props": "^1.0.12",
+    "postcss-preset-env": "^8.0.1",
     "sass": "^1.58.3"
   }
 }
