--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "astro": "^2.0.14",
+    "astro-icon": "^0.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "^8.0.1"
   }
 }
